--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -18,10 +18,10 @@
   transform: translate(-50%, -50%);
   width: 90vw;
   height: auto;
-  max-width: 90vw;
-  max-height: 90vh;
+  /* max-width: 90vw;
+  max-height: 90vh; */
   object-fit: contain;
-  background-color: #fff;
+  /* background-color: #fff; */
   border-radius: 5px;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
